[package]
name = "polymock"
version = "0.1.0"
edition = "2021"
description = "A thread-safe arena bytes allocator"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/polymock-rs"
documentation = "https://docs.rs/polymock"
license = "MIT OR Apache-2.0"

[dependencies]

[target.'cfg(loom)'.dev-dependencies]
loom = "0.5"
