[package]
name = "polymock"
version = "0.2.0"
edition = "2021"
description = "A thread-safe arena bytes allocator"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/polymock-rs"
documentation = "https://docs.rs/polymock"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []

[dependencies]

[target.'cfg(loom)'.dev-dependencies]
loom = "0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
